fix "learn more" buttons on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -158,7 +158,16 @@ main > .whitespace:first-child {
   margin-bottom: 50px;
 }
 
-
+@media (max-width: 960px) {
+  .hide-mobile {
+    display: none;
+  }
+}
+@media (min-width: 960px) {
+  .hide-desktop {
+    display: none;
+  }
+}
 /*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
